force-app/main/default/objects/Log_Document_Link__c/Log_Document_Link__c.object-meta.xml
<CustomObject>
    <label>Log Document Link Message</label>
    <nameField>
        <displayFormat>LCV-{000000}</displayFormat>
        <label>Log Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Document Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>