force-app/main/default/objects/Log_Document_Link__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <label>ContentVersion Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>