force-app/main/default/objects/Log_Document_Link__c/fields/PathOnClient__c.field-meta.xml
<CustomField>
    <fullName>PathOnClient__c</fullName>
    <label>PathOnClient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>