force-app/main/default/objects/Log_Document_Link__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>